components/uftpd/src/cmdparser.c
/* Generated by re2c 1.0.1 on Sun Dec 30 14:55:09 2018 */
#line 1 "cmdparser.re"
#include "cmds.h"
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

// TODO: Probably move somewhere else?
const char *keyword_names[] = {
    "INVALID",
    "USER",           // <SP> <username> <CRLF>
    "PASS",           // <SP> <password> <CRLF>
    "ACCT",           // <SP> <account-information> <CRLF>
    "CWD",            // <SP> <pathname> <CRLF>
    "CDUP",           // <CRLF>
    "SMNT",           // <SP> <pathname> <CRLF>
    "QUIT",           // <CRLF>
    "REIN",           // <CRLF>
    "PORT",           // <SP> <host-port> <CRLF>
    "PASV",           // <CRLF>
    "TYPE",           // <SP> <type-code> <CRLF>
    "STRU",           // <SP> <structure-code> <CRLF>
    "MODE",           // <SP> <mode-code> <CRLF>
    "RETR",           // <SP> <pathname> <CRLF>
    "STOR",           // <SP> <pathname> <CRLF>
    "STOU",           // <CRLF>
    "APPE",           // <SP> <pathname> <CRLF>
    "ALLO",           // <SP> <decimal-integer>
                      // [<SP> R <SP> <decimal-integer>] <CRLF>
    "REST",           // <SP> <marker> <CRLF>
    "RNFR",           // <SP> <pathname> <CRLF>
    "RNTO",           // <SP> <pathname> <CRLF>
    "ABOR",           // <CRLF>
    "DELE",           // <SP> <pathname> <CRLF>
    "RMD",            // <SP> <pathname> <CRLF>
    "MKD",            // <SP> <pathname> <CRLF>
    "PWD",            // <CRLF>
    "LIST",           // [<SP> <pathname>] <CRLF>
    "NLST",           // [<SP> <pathname>] <CRLF>
    "SITE",           // <SP> <string> <CRLF>
    "SYST",           // <CRLF>
    "STAT",           // [<SP> <pathname>] <CRLF>
    "HELP",           // [<SP> <string>] <CRLF>
    "NOOP",           // <CRLF>
    "NUM_FTPKEYWORDS" // is set to number of commands
};

#define CMD_NOPARAM(KEYWORD)                                                                       \
	cmd.keyword = KEYWORD;                                                                         \
	goto done;

#define CMD_STRING(KEYWORD)                                                                        \
	cmd.keyword = KEYWORD;                                                                         \
	size_t len = p2 - p1 > MAX_STRSIZE ? MAX_STRSIZE : p2 - p1;                                    \
	memcpy(&cmd.parameter.string, p1, len);                                                        \
	cmd.parameter.string[len] = '\0';                                                              \
	goto done;

#define CMD_OPT_STRING(KEYWORD)                                                                    \
	cmd.keyword = KEYWORD;                                                                         \
	size_t len = p2 - p1 > MAX_STRSIZE ? MAX_STRSIZE : p2 - p1;                                    \
	if (len > 0) {                                                                                 \
		memcpy(&cmd.parameter.string, p1, len);                                                    \
		cmd.parameter.string[len] = '\0';                                                          \
	}                                                                                              \
	goto done;

FtpCmd parse_ftpcmd(const char *YYCURSOR) {
	FtpCmd cmd;
	cmd.parameter.string[0] = 0; // 0 marks no string option given
	cmd.keyword = INVALID;

	const char *YYMARKER;
	const char *p1, *p2, *p3, *p4, *p5, *p6;
	const char *yyt1;const char *yyt2;const char *yyt3;const char *yyt4;const char *yyt5;const char *yyt6;
	
#line 78 "cmdparser.c"
{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
	case 'A':	goto yy4;
	case 'C':	goto yy5;
	case 'D':	goto yy6;
	case 'H':	goto yy7;
	case 'L':	goto yy8;
	case 'M':	goto yy9;
	case 'N':	goto yy10;
	case 'P':	goto yy11;
	case 'Q':	goto yy12;
	case 'R':	goto yy13;
	case 'S':	goto yy14;
	case 'T':	goto yy15;
	case 'U':	goto yy16;
	default:	goto yy2;
	}
yy2:
	++YYCURSOR;
yy3:
#line 98 "cmdparser.re"
	{ goto done; }
#line 103 "cmdparser.c"
yy4:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'B':	goto yy17;
	case 'C':	goto yy19;
	case 'L':	goto yy20;
	default:	goto yy3;
	}
yy5:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'D':	goto yy21;
	case 'W':	goto yy22;
	default:	goto yy3;
	}
yy6:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'E':	goto yy23;
	default:	goto yy3;
	}
yy7:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'E':	goto yy24;
	default:	goto yy3;
	}
yy8:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'I':	goto yy25;
	default:	goto yy3;
	}
yy9:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'K':	goto yy26;
	case 'O':	goto yy27;
	default:	goto yy3;
	}
yy10:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'L':	goto yy28;
	case 'O':	goto yy29;
	default:	goto yy3;
	}
yy11:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'A':	goto yy30;
	case 'O':	goto yy31;
	case 'W':	goto yy32;
	default:	goto yy3;
	}
yy12:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'U':	goto yy33;
	default:	goto yy3;
	}
yy13:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'E':	goto yy34;
	case 'M':	goto yy35;
	case 'N':	goto yy36;
	default:	goto yy3;
	}
yy14:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'I':	goto yy37;
	case 'M':	goto yy38;
	case 'T':	goto yy39;
	case 'Y':	goto yy40;
	default:	goto yy3;
	}
yy15:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'Y':	goto yy41;
	default:	goto yy3;
	}
yy16:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'S':	goto yy42;
	default:	goto yy3;
	}
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':	goto yy43;
	default:	goto yy18;
	}
yy18:
	YYCURSOR = YYMARKER;
	goto yy3;
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'C':	goto yy44;
	default:	goto yy18;
	}
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':	goto yy45;
	default:	goto yy18;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'U':	goto yy46;
	default:	goto yy18;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'D':	goto yy47;
	default:	goto yy18;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':	goto yy48;
	default:	goto yy18;
	}
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':	goto yy49;
	default:	goto yy18;
	}
yy25:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':	goto yy50;
	default:	goto yy18;
	}
yy26:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'D':	goto yy51;
	default:	goto yy18;
	}
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'D':	goto yy52;
	default:	goto yy18;
	}
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':	goto yy53;
	default:	goto yy18;
	}
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':	goto yy54;
	default:	goto yy18;
	}
yy30:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':	goto yy55;
	default:	goto yy18;
	}
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':	goto yy56;
	default:	goto yy18;
	}
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'D':	goto yy57;
	default:	goto yy18;
	}
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':	goto yy58;
	default:	goto yy18;
	}
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':	goto yy59;
	case 'T':	goto yy60;
	default:	goto yy18;
	}
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'D':	goto yy61;
	default:	goto yy18;
	}
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'F':	goto yy62;
	case 'T':	goto yy63;
	default:	goto yy18;
	}
yy37:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy64;
	default:	goto yy18;
	}
yy38:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':	goto yy65;
	default:	goto yy18;
	}
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':	goto yy66;
	case 'O':	goto yy67;
	case 'R':	goto yy68;
	default:	goto yy18;
	}
yy40:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':	goto yy69;
	default:	goto yy18;
	}
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'P':	goto yy70;
	default:	goto yy18;
	}
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy71;
	default:	goto yy18;
	}
yy43:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':	goto yy72;
	default:	goto yy18;
	}
yy44:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy73;
	default:	goto yy18;
	}
yy45:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':	goto yy74;
	default:	goto yy18;
	}
yy46:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'P':	goto yy75;
	default:	goto yy18;
	}
yy47:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy76;
	default:	goto yy18;
	}
yy48:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy78;
	default:	goto yy18;
	}
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'P':	goto yy79;
	default:	goto yy18;
	}
yy50:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy80;
	default:	goto yy18;
	}
yy51:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy81;
	default:	goto yy18;
	}
yy52:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy83;
	default:	goto yy18;
	}
yy53:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy84;
	default:	goto yy18;
	}
yy54:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'P':	goto yy85;
	default:	goto yy18;
	}
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':	goto yy86;
	case 'V':	goto yy87;
	default:	goto yy18;
	}
yy56:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy88;
	default:	goto yy18;
	}
yy57:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':	goto yy89;
	case '\r':	goto yy91;
	default:	goto yy18;
	}
yy58:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy92;
	default:	goto yy18;
	}
yy59:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy93;
	default:	goto yy18;
	}
yy60:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':	goto yy94;
	default:	goto yy18;
	}
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy95;
	default:	goto yy18;
	}
yy62:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':	goto yy97;
	default:	goto yy18;
	}
yy63:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':	goto yy98;
	default:	goto yy18;
	}
yy64:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy99;
	default:	goto yy18;
	}
yy65:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy100;
	default:	goto yy18;
	}
yy66:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy101;
	default:	goto yy18;
	}
yy67:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':	goto yy102;
	case 'U':	goto yy103;
	default:	goto yy18;
	}
yy68:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'U':	goto yy104;
	default:	goto yy18;
	}
yy69:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy105;
	default:	goto yy18;
	}
yy70:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy106;
	default:	goto yy18;
	}
yy71:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':	goto yy107;
	default:	goto yy18;
	}
yy72:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':	goto yy108;
	case '\r':	goto yy110;
	default:	goto yy18;
	}
yy73:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy111;
	default:	goto yy18;
	}
yy74:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':	goto yy113;
	case '\r':	goto yy115;
	default:	goto yy18;
	}
yy75:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':	goto yy116;
	case '\r':	goto yy118;
	default:	goto yy18;
	}
yy76:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':	goto yy18;
	case '\t':
	case ' ':	goto yy76;
	default:
		yyt1 = YYCURSOR;
		goto yy119;
	}
yy78:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy121;
	default:	goto yy18;
	}
yy79:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':
		yyt1 = yyt2 = NULL;
		goto yy123;
	case '\t':
	case ' ':	goto yy125;
	case '\r':
		yyt1 = yyt2 = NULL;
		goto yy127;
	default:	goto yy18;
	}
yy80:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':
		yyt1 = yyt2 = NULL;
		goto yy128;
	case '\t':
	case ' ':	goto yy130;
	case '\r':
		yyt1 = yyt2 = NULL;
		goto yy132;
	default:	goto yy18;
	}
yy81:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':	goto yy18;
	case '\t':
	case ' ':	goto yy81;
	default:
		yyt1 = YYCURSOR;
		goto yy133;
	}
yy83:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy135;
	default:	goto yy18;
	}
yy84:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':
		yyt1 = yyt2 = NULL;
		goto yy137;
	case '\t':
	case ' ':	goto yy139;
	case '\r':
		yyt1 = yyt2 = NULL;
		goto yy141;
	default:	goto yy18;
	}
yy85:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':	goto yy142;
	case '\r':	goto yy144;
	default:	goto yy18;
	}
yy86:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy145;
	default:	goto yy18;
	}
yy87:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':	goto yy147;
	case '\r':	goto yy149;
	default:	goto yy18;
	}
yy88:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy18;
	default:	goto yy151;
	}
yy89:
	++YYCURSOR;
#line 144 "cmdparser.re"
	{ CMD_NOPARAM(PWD) }
#line 685 "cmdparser.c"
yy91:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy89;
	default:	goto yy18;
	}
yy92:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':	goto yy152;
	case '\r':	goto yy154;
	default:	goto yy18;
	}
yy93:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy155;
	default:	goto yy18;
	}
yy94:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy157;
	default:	goto yy18;
	}
yy95:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':	goto yy18;
	case '\t':
	case ' ':	goto yy95;
	default:
		yyt1 = YYCURSOR;
		goto yy159;
	}
yy97:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy161;
	default:	goto yy18;
	}
yy98:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy163;
	default:	goto yy18;
	}
yy99:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':
		yyt1 = yyt2 = NULL;
		goto yy165;
	case '\t':
	case ' ':	goto yy167;
	case '\r':
		yyt1 = yyt2 = NULL;
		goto yy169;
	default:	goto yy18;
	}
yy100:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy170;
	default:	goto yy18;
	}
yy101:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':
		yyt1 = yyt2 = NULL;
		goto yy172;
	case '\t':
	case ' ':	goto yy174;
	case '\r':
		yyt1 = yyt2 = NULL;
		goto yy176;
	default:	goto yy18;
	}
yy102:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy177;
	default:	goto yy18;
	}
yy103:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':	goto yy179;
	case '\r':	goto yy181;
	default:	goto yy18;
	}
yy104:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy182;
	default:	goto yy18;
	}
yy105:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':	goto yy184;
	case '\r':	goto yy186;
	default:	goto yy18;
	}
yy106:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy187;
	default:	goto yy18;
	}
yy107:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy189;
	default:	goto yy18;
	}
yy108:
	++YYCURSOR;
#line 140 "cmdparser.re"
	{ CMD_NOPARAM(ABOR) }
#line 823 "cmdparser.c"
yy110:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy108;
	default:	goto yy18;
	}
yy111:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':	goto yy18;
	case '\t':
	case ' ':	goto yy111;
	default:
		yyt1 = YYCURSOR;
		goto yy191;
	}
yy113:
	++YYCURSOR;
#line 136 "cmdparser.re"
	{ CMD_NOPARAM(ALLO) }
#line 846 "cmdparser.c"
yy115:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy113;
	default:	goto yy18;
	}
yy116:
	++YYCURSOR;
#line 103 "cmdparser.re"
	{ CMD_NOPARAM(CDUP) }
#line 857 "cmdparser.c"
yy118:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy116;
	default:	goto yy18;
	}
yy119:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':
		yyt2 = YYCURSOR;
		goto yy193;
	case '\r':
		yyt2 = YYCURSOR;
		goto yy195;
	default:	goto yy119;
	}
yy121:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':	goto yy18;
	case '\t':
	case ' ':	goto yy121;
	default:
		yyt1 = YYCURSOR;
		goto yy196;
	}
yy123:
	++YYCURSOR;
	p1 = yyt2;
	p2 = yyt1;
#line 150 "cmdparser.re"
	{ CMD_OPT_STRING(HELP) }
#line 894 "cmdparser.c"
yy125:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':	goto yy18;
	case '\t':
	case ' ':	goto yy125;
	default:
		yyt2 = YYCURSOR;
		goto yy198;
	}
yy127:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy123;
	default:	goto yy18;
	}
yy128:
	++YYCURSOR;
	p1 = yyt2;
	p2 = yyt1;
#line 145 "cmdparser.re"
	{ CMD_OPT_STRING(LIST) }
#line 919 "cmdparser.c"
yy130:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':	goto yy18;
	case '\t':
	case ' ':	goto yy130;
	default:
		yyt2 = YYCURSOR;
		goto yy200;
	}
yy132:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy128;
	default:	goto yy18;
	}
yy133:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':
		yyt2 = YYCURSOR;
		goto yy202;
	case '\r':
		yyt2 = YYCURSOR;
		goto yy204;
	default:	goto yy133;
	}
yy135:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy135;
	case 'B':
	case 'C':
	case 'S':
		yyt1 = YYCURSOR;
		goto yy205;
	default:	goto yy18;
	}
yy137:
	++YYCURSOR;
	p1 = yyt2;
	p2 = yyt1;
#line 146 "cmdparser.re"
	{ CMD_OPT_STRING(NLST) }
#line 968 "cmdparser.c"
yy139:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':	goto yy18;
	case '\t':
	case ' ':	goto yy139;
	default:
		yyt2 = YYCURSOR;
		goto yy206;
	}
yy141:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy137;
	default:	goto yy18;
	}
yy142:
	++YYCURSOR;
#line 151 "cmdparser.re"
	{ CMD_NOPARAM(NOOP) }
#line 991 "cmdparser.c"
yy144:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy142;
	default:	goto yy18;
	}
yy145:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':	goto yy18;
	case '\t':
	case ' ':	goto yy145;
	default:
		yyt1 = YYCURSOR;
		goto yy208;
	}
yy147:
	++YYCURSOR;
#line 117 "cmdparser.re"
	{ CMD_NOPARAM(PASV) }
#line 1014 "cmdparser.c"
yy149:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy147;
	default:	goto yy18;
	}
yy150:
	yych = *++YYCURSOR;
yy151:
	switch (yych) {
	case '\t':
	case ' ':	goto yy150;
	case '0':
		yyt1 = YYCURSOR;
		goto yy210;
	case '1':
		yyt1 = YYCURSOR;
		goto yy211;
	case '2':
		yyt1 = YYCURSOR;
		goto yy212;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt1 = YYCURSOR;
		goto yy213;
	default:	goto yy18;
	}
yy152:
	++YYCURSOR;
